--- a/src/index.html
+++ b/src/index.html
@@ -11,21 +11,27 @@
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="css/main.css">
 
         <link rel="icon" type="image/png" href="favicon.ico">
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     </head>
     <body>
         <div id="navMenu"></div>
+            <div id="header-image">
+                  <img src="atos.png" class="img-rounded" id="atos-image" alt="atos">
+            </div>>
+        <hr>
         <div class="container">
-            <div class="jumbotron jumbotron-extender">
-                <h1>About Us</h1>
+            <div class="jumbotron jumbotron-extender" id="about-us">
+
+                     <h1>About Us</h1>
+
             </div>
             <div class="jumbotron" id="main-body">
 
