--- a/src/index.html
+++ b/src/index.html
@@ -25,17 +25,30 @@
         <div id="navMenu"></div>
             <div id="header-image">
                   <img src="atos.png" class="img-rounded" id="atos-image" alt="atos">
-            </div>>
+            </div>
         <hr>
         <div class="container">
-            <div class="jumbotron jumbotron-extender" id="about-us">
 
+            <!-- main text-->
+            <div class="jumbotron jumbotron-extender" id="extender1">
                      <h1>About Us</h1>
-
             </div>
-            <div class="jumbotron" id="main-body">
-
+            <div class="jumbotron" id="extended1">
             </div>
+
+            <div class="jumbotron jumbotron-extender" id="extender2">
+                <h1>Initial Problem</h1>
+            </div>
+            <div class="jumbotron" id="extended2">
+            </div>
+
+            <div class="jumbotron jumbotron-extender" id="extender3">
+                <h1>Client</h1>
+            </div>
+            <div class="jumbotron" id="extended3">
+            </div>
+            <!-- main text-->
+
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
