--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,21 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="css/main.css">
-
-        <link rel="icon" type="image/png" href="favicon.ico">
-
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <head id="header">
+        <title>ATOS Finance</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script>
+            $('#header').load('other/header.html')
+        </script>
     </head>
     <body>
-        <div id="navMenu"></div>
-            <div id="header-image">
-                  <img src="atos.png" class="img-rounded" id="atos-image" alt="atos">
-            </div>
-        <hr>
-        <div class="container">
+        <div class="container-fluid body-top bg-1">
+            <div id="navMenu"></div>
+                <div id="header-image">
+                      <img src="atos.png" class="img-rounded" id="atos-image" alt="atos">
+                </div>
+            <hr>
+        </div>
+        <div class="container-fluid bg-2 text-center">
 
             <!-- main text-->
             <div class="jumbotron jumbotron-extender" id="extender1">
@@ -47,27 +35,13 @@
             </div>
             <div class="jumbotron" id="extended3">
             </div>
-            <!-- main text-->
+            <!-- end main text-->
 
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-
-        <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+            <!--footer starts-->
+            <div id="footer"></div>
+            <script>
+                $('#footer').load('other/footer.html')
+            </script>
         </div>
     </body>
 </html>
