--- a/src/index.html
+++ b/src/index.html
@@ -18,22 +18,25 @@
         <div class="container-fluid bg-2 text-center">
 
             <!-- main text-->
-            <div class="jumbotron jumbotron-extender" id="extender1">
-                     <h1>About Us</h1>
-            </div>
-            <div class="jumbotron" id="extended1">
-            </div>
-
-            <div class="jumbotron jumbotron-extender" id="extender2">
-                <h1>Initial Problem</h1>
-            </div>
-            <div class="jumbotron" id="extended2">
+            <div class="panel panel-primary" id="extender1">
+                <div class="panel-heading extender">About Us</div>
+                <div class="panel-body" id="extended1">
+                    <p>Hello</p>
+                </div>
             </div>
 
-            <div class="jumbotron jumbotron-extender" id="extender3">
-                <h1>Client</h1>
+            <div class="panel panel-primary" id="extender2">
+                <div class="panel-heading extender">Initial Problem</div>
+                <div class="panel-body" id="extended2">
+                    <p>Hello</p>
+                </div>
             </div>
-            <div class="jumbotron" id="extended3">
+
+            <div class="panel panel-primary" id="extender3">
+                <div class="panel-heading extender">Client</div>
+                <div class="panel-body" id="extended3">
+                    <p>Hello</p>
+                </div>
             </div>
             <!-- end main text-->
 
