--- a/src/other/footer.html
+++ b/src/other/footer.html
@@ -1,4 +1,4 @@
-<footer class="container-fluid text-center">
+<footer class="container-fluid bg-4 text-center">
     <p>Made By ATOS Team 18 <br> Artem Skulimovskiy <br> ... </p>
 </footer>
 
@@ -6,7 +6,7 @@
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
 
-
+<link rel="stylesheet" href="css/main.css">
 <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
