added pages, footer fixed

--- a/other/footer.html
+++ b/other/footer.html
@@ -1,5 +1,5 @@
 <footer class="container-fluid bg-4 text-center">
-    <p>Made By ATOS Team 18 <br> Artem Skulimovskiy <br> ... </p>
+    <p>Made By ATOS Team 18 <br> Artem Skulimovskiy, Varun Mathur, Sidharth Sikka <br> UCL </p>
 </footer>
 
 <!--[if lt IE 8]>
