--- a/Background.html
+++ b/Background.html
@@ -16,25 +16,19 @@
 
     <!-- main text-->
     <div class="panel panel-primary" id="extender1">
-        <div class="panel-heading extender">About Us</div>
+        <div class="panel-heading extender">ATOS</div>
         <div class="panel-body" id="extended1">
             <p>Hello</p>
         </div>
     </div>
 
     <div class="panel panel-primary" id="extender2">
-        <div class="panel-heading extender">Initial Problem</div>
+        <div class="panel-heading extender">NS&I</div>
         <div class="panel-body" id="extended2">
             <p>Hello</p>
         </div>
     </div>
 
-    <div class="panel panel-primary" id="extender3">
-        <div class="panel-heading extender">Client</div>
-        <div class="panel-body" id="extended3">
-            <p>Hello</p>
-        </div>
-    </div>
     <!-- end main text-->
 
     <!--footer starts-->
