--- a/Plans.html
+++ b/Plans.html
@@ -16,21 +16,21 @@
 
     <!-- main text-->
     <div class="panel panel-primary" id="extender1">
-        <div class="panel-heading extender">About Us</div>
+        <div class="panel-heading extender">Near Future</div>
         <div class="panel-body" id="extended1">
             <p>Hello</p>
         </div>
     </div>
 
     <div class="panel panel-primary" id="extender2">
-        <div class="panel-heading extender">Initial Problem</div>
-        <div class="panel-body" id="extended2">
+        <div class="panel-heading extender">Our Part</div>
+        <div class="panel-body " id="extended2">
             <p>Hello</p>
         </div>
     </div>
 
     <div class="panel panel-primary" id="extender3">
-        <div class="panel-heading extender">Client</div>
+        <div class="panel-heading extender">End Result</div>
         <div class="panel-body" id="extended3">
             <p>Hello</p>
         </div>
