--- a/Project.html
+++ b/Project.html
@@ -16,7 +16,7 @@
 
     <!-- main text-->
     <div class="panel panel-primary" id="extender1">
-        <div class="panel-heading extender">About Us</div>
+        <div class="panel-heading extender">Quick Overview</div>
         <div class="panel-body" id="extended1">
             <p>Hello</p>
         </div>
