--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <div class="panel panel-primary" id="extender1">
                 <div class="panel-heading extender">About Us</div>
                 <div class="panel-body" id="extended1">
-                    <p>Hello</p>
+                    <p>Our group called ATOS Finance team 18 is a team of second year computer scientist, we were
+                        assigned to do a group project with atos for our module COMP204P. In this module we are given a
+                        real world problem that we are supposed to solve for a company allocated... </p>
                 </div>
             </div>
 
