--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<head>
+<head id="header">
     <meta charset="utf-8">
     <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -52,7 +52,7 @@
 
     </style>
 </head>
-<body>
+<body class="bg-1">
     <h1>Page Not Found</h1>
     <p>Sorry, but the page you were trying to view does not exist.</p>
 </body>
