--- a/Prototype.html
+++ b/Prototype.html
@@ -16,21 +16,21 @@
 
     <!-- main text-->
     <div class="panel panel-primary" id="extender1">
-        <div class="panel-heading extender">About Us</div>
+        <div class="panel-heading extender">Paper Prototype</div>
         <div class="panel-body" id="extended1">
             <p>Hello</p>
         </div>
     </div>
 
     <div class="panel panel-primary" id="extender2">
-        <div class="panel-heading extender">Initial Problem</div>
+        <div class="panel-heading extender">App Prototype</div>
         <div class="panel-body" id="extended2">
             <p>Hello</p>
         </div>
     </div>
 
     <div class="panel panel-primary" id="extender3">
-        <div class="panel-heading extender">Client</div>
+        <div class="panel-heading extender">Failed Prototypes</div>
         <div class="panel-body" id="extended3">
             <p>Hello</p>
         </div>
