--- a/other/header.html
+++ b/other/header.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
+<link href="https://fonts.googleapis.com/css?family=Itim|Roboto" rel="stylesheet">
 <!-- Place favicon.ico in the root directory -->
 
 <link rel="stylesheet" href="css/normalize.css">
