bug fixes + design

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         </script>
     </head>
     <body>
-    <script>$.backstretch(['mountains.jpg']);</script>
+    <script>$.backstretch(['img/mountains.jpg','img/port.jpg','img/bath.jpg','img/swanage.jpg'], {duration: 20000, fade: 1000});</script>
+    <div id="navMenu"></div>
         <div class="container-fluid body-top bg-2">
-            <div id="navMenu"></div>
                 <div id="header-image">
-                      <img src="atos.png" class="img-rounded" id="atos-image" alt="atos">
+                      <img src="img/atos.png" class="img-rounded" id="atos-image" alt="atos">
                 </div>
             <hr>
         </div>
