--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="navMenu"></div>
         <div class="container-fluid body-top bg-2">
                 <div id="header-image">
-                      <img src="img/atos.png" class="img-rounded" id="atos-image" alt="atos">
+                      <img src="img/atos.png" class="img-rounded img-responsive" id="atos-image" alt="atos">
                 </div>
             <hr>
         </div>
