group info added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div id="header-image">
                       <img src="img/atos.png" class="img-rounded img-responsive" id="atos-image" alt="atos">
                 </div>
-            <hr>
+            <hr class="hr-white">
         </div>
         <div class="container-fluid bg-2 text-center">
 
@@ -23,9 +23,47 @@
             <div class="panel panel-primary" id="extender1">
                 <div class="panel-heading extender">About Us</div>
                 <div class="panel-body" id="extended1">
-                    <p>Our group called ATOS Finance team 18 is a team of second year computer scientist, we were
-                        assigned to do a group project with atos for our module COMP204P. In this module we are given a
-                        real world problem that we are supposed to solve for a company allocated... </p>
+                    <h3>ATOS Finance Group 18</h3>
+                    <p>Our group called &#34ATOS Finance team 18&#34 is a team of second year computer scientist, we were assigned
+                        to do a group project with ATOS for our module COMP204P. In this module we are given a real world problem
+                        that we are supposed to solve for a company allocated. Our allocated Company is ATOS that has challenged us</p>
+                    <hr>
+                    <h3>Artem Skulimovskiy</h3>
+                    <div class="row">
+                        <img src="img/Artem.PNG" class="img-rounded img-responsive col-sm-4" id="artem-image" alt="atos">
+                        <p class="col-sm-8">
+                            Hello my name is Artem Skulimovskiy, I am a second year computer scientist at UCL on my way to an MEng in
+                            Computer Science. I am currently the leader of this project so if you have any questions about it I am the
+                            person to contact. I have first started programming at an age of 13 and since then I have learnt many programming
+                            languages and concepts of computer science.The UCL curriculum involves a lot of real world problems, so I had
+                            many projects at this level prior to this one. In more recent times I became interested in financial computation
+                            so this project with ATOS is really relevant to my points of interest.
+                        </p>
+                    </div>
+                    <hr>
+                    <h3>Varun Mathur</h3>
+                    <div class="row">
+                        <img src="img/Varun.PNG" class="img-rounded img-responsive col-sm-4" id="varun-image" alt="atos">
+                        <p class="col-sm-8">
+                            My name is Varun Mathur, I am a second year student at UCL  pursuing an MEng in Computer Science. I have been
+                            programming for around five years, starting with JAVA and Android Development and then moving on with Python,
+                            PHP, SQL and a few other languages. I have an interest in financial technology, having done some work experience
+                            in the industry including internships at an insurance tech startup as well as a prime brokerage. Outside of school
+                            I have a keen interest in golf, cricket, volleyball and tennis.
+                        </p>
+                    </div>
+                    <hr>
+                    <h3>Sidharth Sikka</h3>
+                    <div class="row">
+                        <img src="img/Sidharth.PNG" class="img-rounded img-responsive col-sm-4" id="sidharth-image" alt="atos">
+                        <p class="col-sm-8">
+                            Hi my name is Sidharth Sikka i am a second year student at UCL currently pursuing my BSC in Computer Science.
+                            My first interaction with computer science was at a very young age when my parents gifted me a programmable
+                            robot and since then i have been hooked. I have gone on to develop my skills in C, C++, Java, web development
+                            and Python. I have done many projects within web development and am currently looking to take on projects in
+                            Java to further advance my skills.Outside of work, I enjoy playing cricket, golf and squash.
+                        </p>
+                    </div>
                 </div>
             </div>
 
