more context added

--- a/Background.html
+++ b/Background.html
@@ -15,7 +15,7 @@
     <div id="header-image">
         <img src="img/atos.png" class="img-rounded img-responsive" id="atos-image" alt="atos">
     </div>
-    <hr>
+    <hr class="hr-white">
 </div>
 <div class="container-fluid bg-2 text-center">
 
@@ -23,9 +23,21 @@
     <div class="panel panel-primary" id="extender1">
         <div class="panel-heading extender">ATOS</div>
         <div class="panel-body" id="extended1">
-            <p>Our group called ATOS Finance team 18 is a team of second year computer scientist, we were
-                assigned to do a group project with atos for our module COMP204P. In this module we are given a
-                real world problem that we are supposed to solve for a company allocated... </p>
+            <p>ATOS was first formed back in 1997 when two french IT companies merged together, it was later rebranded into ATOS
+                Origin after more companies merged in the year 2000. The current headquarters of ATOS are located in Bezons France
+                and Munich Germany. We are specifically working with the branch that is located in London Euston however our client
+                spends most of the time working for ATOS in Manchester.
+                <br><br>
+                Currently ATOS provides a number of services which includes but is not limited to:
+            <ul>
+                <li>consulting & systems integration</li>
+                <li>managed services</li>
+                <li>cloud with its structure Canopy</li>
+                <li>big data and analytics</li>
+                <li>cybersecurity</li>
+                <li>payment and e-transactional services from its subsidiary Worldline</li>
+                <li>unified communication and colloration services and products from the Unify acquisition</li>
+            </ul> </p>
         </div>
     </div>
 
