--- a/Plans.html
+++ b/Plans.html
@@ -12,7 +12,7 @@
 <script>$.backstretch(['img/mountains.jpg','img/port.jpg','img/bath.jpg','img/swanage.jpg'], {duration: 20000, fade: 1000});</script>
 <div id="navMenu"></div>
 <div class="container-fluid body-top bg-2">
-    <hr>
+    <hr class="hr-white">
 </div>
 <div class="container-fluid bg-2 text-center">
 
