--- a/index.html
+++ b/index.html
@@ -70,14 +70,31 @@
             <div class="panel panel-primary" id="extender2">
                 <div class="panel-heading extender">Initial Problem</div>
                 <div class="panel-body" id="extended2">
-                    <p>Hello</p>
+                    <p>We have been assigned National Savings & Investment (NS&#38I) as a client through ATOS.
+                        Our project is to raise awareness of NS&#38I&#180s products and services to the younger generation
+                        (roughly those aged 18-30). The wider context is that NS&#38I hopes to digitise in its entirety
+                        and be more intuitive and easy to use.
+                        <br><br>
+                        The project is fairly open ended, with no specific type of deliverable named by the client.
+                        Solutions could range from a website to an app to a whole new product or service. We will be
+                        responsible for coming up with an innovative idea to solve this problem.</p>
                 </div>
             </div>
 
             <div class="panel panel-primary" id="extender3">
                 <div class="panel-heading extender">Client</div>
                 <div class="panel-body" id="extended3">
-                    <p>Hello</p>
+                    <h3>David Swallow</h3>
+                    <div class="row">
+                        <img src="img/Sidharth.PNG" class="img-rounded img-responsive col-sm-4" id="sidharth-image" alt="atos">
+                        <p class="col-sm-8">
+                            Hi my name is Sidharth Sikka i am a second year student at UCL currently pursuing my BSC in Computer Science.
+                            My first interaction with computer science was at a very young age when my parents gifted me a programmable
+                            robot and since then i have been hooked. I have gone on to develop my skills in C, C++, Java, web development
+                            and Python. I have done many projects within web development and am currently looking to take on projects in
+                            Java to further advance my skills.Outside of work, I enjoy playing cricket, golf and squash.
+                        </p>
+                    </div>
                 </div>
             </div>
             <!-- end main text-->
