--- a/Project.html
+++ b/Project.html
@@ -15,7 +15,7 @@
     <div id="header-image">
         <img src="img/atos.png" class="img-rounded img-responsive" id="atos-image" alt="atos">
     </div>
-    <hr>
+    <hr class="hr-white">
 </div>
 <div class="container-fluid bg-2 text-center">
 
