--- a/Development.html
+++ b/Development.html
@@ -23,9 +23,80 @@
     <div class="panel panel-primary" id="extender1">
         <div class="panel-heading extender">Initial Design</div>
         <div class="panel-body" id="extended1">
-            <p>Our group called ATOS Finance team 18 is a team of second year computer scientist, we were
-                assigned to do a group project with atos for our module COMP204P. In this module we are given a
-                real world problem that we are supposed to solve for a company allocated... </p>
+            <h3>MoSCoW Analysis</h3>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Must</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Extend the functionality of the existing app</td>
+                </tr>
+                <tr>
+                    <td>Manage some functionality of the website</td>
+                </tr>
+                <tr>
+                    <td>Implement group owned premium bonds as a financial product</td>
+                </tr>
+                <tr>
+                    <td>Implement a web interface which surrounds group owned premium bonds, facilitating all required functionality including: setting up and managing a group, buying bonds as a group and checking for and receiving rewards</td>
+                </tr>
+                <tr>
+                    <td>Mobile app must replicate some banking operations found online: check savings balances, check premium bond winnings.</td>
+                </tr>
+                <tr>
+                    <td>Mobile app must implement group owned premium bond interface that allows for: checking group winnings</td>
+                </tr>
+                <tr>
+                    <td>Have a simple modern interface attractive to the younger generation</td>
+                </tr>
+                <tr>
+                    <td>Encourage younger audience to save</td>
+                </tr>
+                <tr>
+                    <th>Should</th>
+                </tr>
+                <tr>
+                    <td>Mobile app should replicate all banking operations found online: check savings balances, create new account, make contributions to account, withdraw from account, buy premium bonds, check premium bond winnings.</td>
+                </tr>
+                <tr>
+                    <td>Mobile app should implement group owned premium bond interface that allows for: checking group winnings, contributing more to groups &#34pot&#34, withdrawing money from groups &#34pot&#34</td>
+                </tr>
+                <tr>
+                    <td>Have a modular and agile design</td>
+                </tr>
+                <tr>
+                    <td>Market NS&I</td>
+                </tr>
+                <tr>
+                    <th>Could</th>
+                </tr>
+                <tr>
+                    <td>Manage all the functionality of the website</td>
+                </tr>
+                <tr>
+                    <td>Facebook integration to find friends for group owned premium bonds</td>
+                </tr>
+                <tr>
+                    <th>Won't Have</th>
+                </tr>
+                <tr>
+                    <td>API to implement our new functionality</td>
+                </tr>
+                <tr>
+                    <td>Have required interactions outside of the mobile application (eg. telephone call)</td>
+                </tr>
+                <tr>
+                    <td>Be catered towards an older audience</td>
+                </tr>
+                <tr>
+                    <td>Integration to NS&I's backend</td>
+                </tr>
+                </tbody>
+            </table>
+
         </div>
     </div>
 
