--- a/Background.html
+++ b/Background.html
@@ -44,7 +44,10 @@
     <div class="panel panel-primary" id="extender2">
         <div class="panel-heading extender">NS&I</div>
         <div class="panel-body" id="extended2">
-            <p>Hello</p>
+            <p>NS&#38I is an investment and savings bank which is state owned by the UK government and was first formed back in 1861.
+                Historically the aim of NS&#38I was to attract funds from individual savers in UK for the purpose of funding the government
+                public sector. Since NS&#38I is a government owned organisation it offers quite a few services that are tax free, this
+                differentiates NS&I from quite a few other savings companies that are located in the UK.</p>
         </div>
     </div>
 
