--- a/Development.html
+++ b/Development.html
@@ -12,10 +12,6 @@
 <script>$.backstretch(['img/mountains.jpg','img/port.jpg','img/bath.jpg','img/swanage.jpg'], {duration: 20000, fade: 1000});</script>
 <div id="navMenu"></div>
 <div class="container-fluid body-top bg-2">
-    <div id="header-image">
-        <img src="img/atos.png" class="img-rounded img-responsive" id="atos-image" alt="atos">
-    </div>
-    <hr class="hr-white">
 </div>
 <div class="container-fluid bg-2 text-center">
 
@@ -96,6 +92,34 @@
                 </tr>
                 </tbody>
             </table>
+
+            <h3>Tangible Deliverables</h3>
+            <ul>
+                <li>Mobile application for NS&I
+                <ul>
+                    <li>Log in screen</li>
+                    <li>Interface to manage and open savings accounts</li>
+                    <li>Interface to buy and check sole owned premium bonds</li>
+                    <li>Interface to manage group owned premium bonds
+                    <ul>
+                        <li>Join groups</li>
+                        <li>Create groups </li>
+                        <li>Contribute to groups</li>
+                        <li>Check winnings</li>
+                    </ul></li>
+                </ul></li>
+                <li>Web interface to allow users to interact with group owned premium bonds
+                <ul>
+                    <li>Join groups</li>
+                    <li>Create groups</li>
+                    <li>Contribute to groups</li>
+                    <li>Check winnings</li>
+                </ul></li>
+                <li>Back-end information system to store data to be shared across both systems.
+                <ul>
+                    <li>User accounts must be consistent across app and web interface</li>
+                </ul></li>
+            </ul>
 
         </div>
     </div>
