--- a/Development.html
+++ b/Development.html
@@ -16,8 +16,8 @@
 <div class="container-fluid bg-2 text-center">
 
     <!-- main text-->
-    <div class="panel panel-primary" id="extender1">
-        <div class="panel-heading extender">Initial Design</div>
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender1">Initial Design</div>
         <div class="panel-body" id="extended1">
             <h3>MoSCoW Analysis</h3>
             <table class="table">
@@ -52,6 +52,12 @@
                     <td>Encourage younger audience to save</td>
                 </tr>
                 <tr>
+                    <td>Have a modular and agile design</td>
+                </tr>
+                <tr>
+                    <td>Legal agreement as to how the money would be split over a group ownership of bonds</td>
+                </tr>
+                <tr>
                     <th>Should</th>
                 </tr>
                 <tr>
@@ -59,9 +65,6 @@
                 </tr>
                 <tr>
                     <td>Mobile app should implement group owned premium bond interface that allows for: checking group winnings, contributing more to groups &#34pot&#34, withdrawing money from groups &#34pot&#34</td>
-                </tr>
-                <tr>
-                    <td>Have a modular and agile design</td>
                 </tr>
                 <tr>
                     <td>Market NS&I</td>
@@ -74,6 +77,12 @@
                 </tr>
                 <tr>
                     <td>Facebook integration to find friends for group owned premium bonds</td>
+                </tr>
+                <tr>
+                    <td>Online help (basic walkthrough)</td>
+                </tr>
+                <tr>
+                    <td>For persona 1 an attractive point could be showing a potential yield using a mathematical model (savings simulator)</td>
                 </tr>
                 <tr>
                     <th>Won't Have</th>
@@ -92,8 +101,17 @@
                 </tr>
                 </tbody>
             </table>
+            <h3>Deliverables</h3>
+            <hr>
+            <p>
+                Our financial product, group owned premium bonds, must be realised fully through an extension of NS&#38I&#39s web interface to facilitate all relevant interaction with this new product. Additionally there must be functionality within the mobile app to facilitate some, if not all of these same interactions.
+<br><br>
+
+                We must deliver a mobile app which offers most, if not all the features of a modern banking app. Features will include: logging in to a user account, checking savings accounts, starting new accounts, buying and checking sole owned premium bonds, and managing group owned premium bonds.
+            </p>
 
             <h3>Tangible Deliverables</h3>
+            <hr>
             <ul>
                 <li>Mobile application for NS&I
                 <ul>
@@ -124,15 +142,15 @@
         </div>
     </div>
 
-    <div class="panel panel-primary" id="extender2">
-        <div class="panel-heading extender">Frameworks & Languages</div>
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender2">Frameworks & Languages</div>
         <div class="panel-body" id="extended2">
             <p>Hello</p>
         </div>
     </div>
 
-    <div class="panel panel-primary" id="extender3">
-        <div class="panel-heading extender">Problems</div>
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender3">Problems</div>
         <div class="panel-body" id="extended3">
             <p>Hello</p>
         </div>
