--- a/Project.html
+++ b/Project.html
@@ -16,8 +16,8 @@
 <div class="container-fluid bg-2 text-center">
 
     <!-- main text-->
-    <div class="panel panel-primary" id="extender1">
-        <div class="panel-heading extender">Quick Overview</div>
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender1">Quick Overview</div>
         <div class="panel-body" id="extended1">
             <p>Our group called ATOS Finance team 18 is a team of second year computer scientist, we were
                 assigned to do a group project with atos for our module COMP204P. In this module we are given a
@@ -25,16 +25,9 @@
         </div>
     </div>
 
-    <div class="panel panel-primary" id="extender2">
-        <div class="panel-heading extender">Initial Problem</div>
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender2">Initial Problem</div>
         <div class="panel-body" id="extended2">
-            <p>Hello</p>
-        </div>
-    </div>
-
-    <div class="panel panel-primary" id="extender3">
-        <div class="panel-heading extender">Client</div>
-        <div class="panel-body" id="extended3">
             <p>Hello</p>
         </div>
     </div>
