--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <div class="container-fluid bg-2 text-center">
 
             <!-- main text-->
-            <div class="panel panel-primary" id="extender1">
-                <div class="panel-heading extender">About Us</div>
+            <div class="panel panel-primary">
+                <div class="panel-heading extender" id="extender1">About Us</div>
                 <div class="panel-body" id="extended1">
                     <h3>ATOS Finance Group 18</h3>
                     <p>Our group called &#34ATOS Finance team 18&#34 is a team of second year computer scientist, we were assigned
                         to do a group project with ATOS for our module COMP204P. In this module we are given a real world problem
-                        that we are supposed to solve for a company allocated. Our allocated Company is ATOS that has challenged us</p>
+                        that we are supposed to solve for a company allocated. Our allocated Company is ATOS that has challenged us.</p>
                     <hr>
                     <h3>Artem Skulimovskiy</h3>
                     <div class="row">
@@ -67,8 +67,8 @@
                 </div>
             </div>
 
-            <div class="panel panel-primary" id="extender2">
-                <div class="panel-heading extender">Initial Problem</div>
+            <div class="panel panel-primary">
+                <div class="panel-heading extender" id="extender2">Initial Problem</div>
                 <div class="panel-body" id="extended2">
                     <p>We have been assigned National Savings & Investment (NS&#38I) as a client through ATOS.
                         Our project is to raise awareness of NS&#38I&#180s products and services to the younger generation
@@ -81,12 +81,12 @@
                 </div>
             </div>
 
-            <div class="panel panel-primary" id="extender3">
-                <div class="panel-heading extender">Client</div>
+            <div class="panel panel-primary">
+                <div class="panel-heading extender" id="extender3">Client</div>
                 <div class="panel-body" id="extended3">
                     <h3>David Swallow</h3>
                     <div class="row">
-                        <img src="img/Sidharth.PNG" class="img-rounded img-responsive col-sm-4" id="sidharth-image" alt="atos">
+                        <img src="img/Sidharth.PNG" class="img-rounded img-responsive col-sm-4" id="david-image" alt="atos">
                         <p class="col-sm-8">
                             Hi my name is Sidharth Sikka i am a second year student at UCL currently pursuing my BSC in Computer Science.
                             My first interaction with computer science was at a very young age when my parents gifted me a programmable
