--- a/Background.html
+++ b/Background.html
@@ -20,8 +20,8 @@
 <div class="container-fluid bg-2 text-center">
 
     <!-- main text-->
-    <div class="panel panel-primary" id="extender1">
-        <div class="panel-heading extender">ATOS</div>
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender1">ATOS</div>
         <div class="panel-body" id="extended1">
             <p>ATOS was first formed back in 1997 when two french IT companies merged together, it was later rebranded into ATOS
                 Origin after more companies merged in the year 2000. The current headquarters of ATOS are located in Bezons France
@@ -41,8 +41,8 @@
         </div>
     </div>
 
-    <div class="panel panel-primary" id="extender2">
-        <div class="panel-heading extender">NS&I</div>
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender2">NS&I</div>
         <div class="panel-body" id="extended2">
             <p>NS&#38I is an investment and savings bank which is state owned by the UK government and was first formed back in 1861.
                 Historically the aim of NS&#38I was to attract funds from individual savers in UK for the purpose of funding the government
