changes to jquery and favicon

--- a/Development.html
+++ b/Development.html
@@ -145,14 +145,24 @@
     <div class="panel panel-primary">
         <div class="panel-heading extender" id="extender2">Frameworks & Languages</div>
         <div class="panel-body" id="extended2">
-            <p>Hello</p>
+            <h3>Git</h3>
+            <hr>
+            <h3>Xamarin</h3>
+            <hr>
+            <h3>Visual Studio</h3>
+            <hr>
+            <h3>C#</h3>
+            <hr>
+            <h3>SQLite</h3>
+            <hr>
         </div>
     </div>
 
     <div class="panel panel-primary">
         <div class="panel-heading extender" id="extender3">Problems</div>
         <div class="panel-body" id="extended3">
-            <p>Hello</p>
+            <h3>Git</h3>
+            <hr>
         </div>
     </div>
     <!-- end main text-->
