--- a/Prototype.html
+++ b/Prototype.html
@@ -16,26 +16,25 @@
 <div class="container-fluid bg-2 text-center">
 
     <!-- main text-->
+
     <div class="panel panel-primary">
-        <div class="panel-heading extender" id="extender1">Paper Prototype</div>
+        <div class="panel-heading extender" id="extender1">App Prototype</div>
         <div class="panel-body" id="extended1">
-            <p>Our group called ATOS Finance team 18 is a team of second year computer scientist, we were
-                assigned to do a group project with atos for our module COMP204P. In this module we are given a
-                real world problem that we are supposed to solve for a company allocated... </p>
+            <h3>Introduction</h3>
+            <hr>
+            <p>We are currently developing the the app prototype so this section is not complete</p>
+            <h3>InVision</h3>
+            <hr>
         </div>
     </div>
 
     <div class="panel panel-primary">
-        <div class="panel-heading extender" id="extender2">App Prototype</div>
+        <div class="panel-heading extender" id="extender2">Failed Prototypes</div>
         <div class="panel-body" id="extended2">
-            <p>Hello</p>
-        </div>
-    </div>
-
-    <div class="panel panel-primary">
-        <div class="panel-heading extender" id="extender3">Failed Prototypes</div>
-        <div class="panel-body" id="extended3">
-            <p>Hello</p>
+            <h3>Introduction</h3>
+            <hr>
+            <p>Over the cource of our project we have presented several solutions to the client, we do not currently have any working failed prototypes
+            however this is going to change throughout our project...</p>
         </div>
     </div>
     <!-- end main text-->
